clusters/on-prem-cluster/core/longhorn-system/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: longhorn-system
  labels:
    name: longhorn-system
